Fixed Scroll into view

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           <a href="#home" class="mobile-link">Home</a>
           <a href="#features" class="mobile-link">Features</a>
           <a href="#operations" class="mobile-link">Operations</a>
-          <a href="#testimonilas" class="mobile-link">Testimonials</a>
+          <a href="#testimonials" class="mobile-link">Testimonials</a>
           <a href="#" class="header-cta mobile-link show-modal">SignUp</a>
         </div>
       </nav>
