fixed menu navigation to scroll to sections smoothly after clicking

--- a/src/index.html
+++ b/src/index.html
@@ -47,16 +47,16 @@
         <div class="nav-links anim hide-for-mobile">
           <a href="#home" class="nav-link">Home</a>
           <a href="#features" class="nav-link">Features</a>
-          <a href="#operations" class="nav-link">Operations</a>
+          <a href="#operation" class="nav-link">Operations</a>
           <a href="#testimonial" class="nav-link">Testimonials</a>
           <a href="#home" class="nav-link header-cta show-modal">SignUp</a>
         </div>
-        <div class="header-menu hide-for-desktop">
+        <div class="header-menu mobile-links hide-for-desktop">
           <a href="#home" class="mobile-link">Home</a>
           <a href="#features" class="mobile-link">Features</a>
-          <a href="#operations" class="mobile-link">Operations</a>
-          <a href="#testimonials" class="mobile-link">Testimonials</a>
-          <a href="#" class="header-cta mobile-link show-modal">SignUp</a>
+          <a href="#operation" class="mobile-link">Operations</a>
+          <a href="#testimonial" class="mobile-link">Testimonials</a>
+          <a href="#home" class="header-cta mobile-link show-modal">SignUp</a>
         </div>
       </nav>
       <div class="hero container container-pall">
